--- a/Ex39ClasseMetodosAtributosExemploPlatico/Ex39ClasseMetodosAtributosExemploPlatico.csproj
+++ b/Ex39ClasseMetodosAtributosExemploPlatico/Ex39ClasseMetodosAtributosExemploPlatico.csproj
@@ -8,10 +8,11 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>Ex39ClasseMetodosAtributosExemploPlatico</RootNamespace>
     <AssemblyName>Ex39ClasseMetodosAtributosExemploPlatico</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
